BGE python setdeactivationlinearthreshold and angularthreshold functions don't work #30734

Closed
opened 2012-03-30 10:24:49 +02:00 by Jorge Bernal · 7 comments
Member

%%%Hello,

when you set the linear and angular threshold through BGE python functions don't work because the linear and angular thresholds are hardcode (at 0.8 and 1.0 respectively).

I have attached a patch solving this problem and as a extra I have exposed both functions (and deactivation time one) to the Blender UI (in world panel).

This functions deactive the physics under certain threshold improving the performance (and stability).

Regards,
lordloki

%%%

%%%Hello, when you set the linear and angular threshold through BGE python functions don't work because the linear and angular thresholds are hardcode (at 0.8 and 1.0 respectively). I have attached a patch solving this problem and as a extra I have exposed both functions (and deactivation time one) to the Blender UI (in world panel). This functions deactive the physics under certain threshold improving the performance (and stability). Regards, lordloki %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi,

Is this a bug report (BGE python functions for setting the thresholds don't work when the BGE is running) or a patch to add a new feature of setting the "defaults" for those thresholds from bpy/UI? I skimmed through the attached patch and to me it seems like this should be in patches and not a bug report.%%%

%%%Hi, Is this a bug report (BGE python functions for setting the thresholds don't work when the BGE is running) or a patch to add a new feature of setting the "defaults" for those thresholds from bpy/UI? I skimmed through the attached patch and to me it seems like this should be in patches and not a bug report.%%%
Author
Member

%%%Is a bug report because we have 3 functions in BGE related to physics deactivation (linear_threshold, angular_threshold and deactivation time) and only works one of them.

The patch fix this issue and additionally it exposed these 3 functions to blender UI%%%

%%%Is a bug report because we have 3 functions in BGE related to physics deactivation (linear_threshold, angular_threshold and deactivation time) and only works one of them. The patch fix this issue and additionally it exposed these 3 functions to blender UI%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.6 Bug Tracker to Game Engine%%%

%%%Moving to the BGE tracker and assigning to Benoit to review the patch.%%%

%%%Moving to the BGE tracker and assigning to Benoit to review the patch.%%%
Member

%%%Patch commit in revision 47195.

Thanks for the patch.%%%

%%%Patch commit in revision 47195. Thanks for the patch.%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30734
No description provided.